--- a/templates/web-caesar.html
+++ b/templates/web-caesar.html
@@ -14,7 +14,9 @@
     <header>
         <h1>Web Caesar</h1>
     </header>
-    <main></main>
+    <main>
+        <form action="post"></form>
+    </main>
     <footer></footer>
 </body>
 
