added form to html, edited style.css

--- a/templates/web-caesar.html
+++ b/templates/web-caesar.html
@@ -15,7 +15,12 @@
         <h1>Web Caesar</h1>
     </header>
     <main>
-        <form action="post"></form>
+        <form action="" method="post" id="caesar" class="form">
+            <div class="form"><label for="rotate">Rotate by: </label><input type="number" name="rot" id="rotate" value="0"></div>
+            <div class="form"><label for="message">Message</label><input type="text" name="msg" id="message"
+                    placeholder="Enter message here..."></div>
+            <div class="form"><button id="submit" class="button">Submit</button></div>
+        </form>
     </main>
     <footer></footer>
 </body>
