--- a/static/style.css
+++ b/static/style.css
@@ -1,3 +1,9 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 form {
     background-color: #eee;
     padding: 20px;
@@ -6,7 +12,8 @@ form {
     font: 16px sans-serif;
     border-radius: 10px;
 }
-textarea {
+
+#message {
     margin: 10px 0;
     width: 540px;
     height: 120px;
