--- a/templates/web-caesar.html
+++ b/templates/web-caesar.html
@@ -16,7 +16,7 @@
     </header>
     <main>
         <form action="" method="post" id="caesar" class="form">
-            <div class="form"><label for="rotate">Rotate by: </label><input type="number" name="rot" id="rotate" value="0"></div>
+            <div class="form"><label for="rotate">Rotate by: </label><input type="text" name="rot" id="rotate" value="0"></div>
             <div class="form"><label for="message">Message</label><input type="text" name="msg" id="message"
                     placeholder="Enter message here..."></div>
             <div class="form"><button id="submit" class="button">Submit</button></div>
