--- a/templates/web-caesar.html
+++ b/templates/web-caesar.html
@@ -15,12 +15,27 @@
         <h1>Web Caesar</h1>
     </header>
     <main>
-        <form action="" method="post" id="caesar" class="form">
-            <div class="form"><label for="rotate">Rotate by: </label><input type="text" name="rot" id="rotate" value="0"></div>
-            <div class="form"><label for="message">Message</label><input type="text" name="msg" id="message"
-                    placeholder="Enter message here..."></div>
-            <div class="form"><button id="submit" class="button">Submit</button></div>
-        </form>
+        <section id="user-input" class="user-input">
+            <div class="form">
+                <form action="/" method="post" id="caesar" class="form">
+                    <div class="form"><label for="rotate">Rotate by: </label><input type="number" name="rot" id="rotate"
+                            value="0"></div>
+                    <div class="form"><label for="message">Message</label><input type="text" name="msg" id="message"
+                            placeholder="Enter message here..."></div>
+                    <div class="form"><button id="submit" class="button">Submit</button></div>
+                </form>
+            </div>
+        </section>
+        <section id="encoded">
+            <div class="encoded">
+                <h2 class="encoded"></h2>
+                <div class="encoded">
+                    {% if user_message %}
+                    <p>{{ user_message }}</p>
+                    {% endif %}
+                </div>
+            </div>
+        </section>
     </main>
     <footer></footer>
 </body>
